[package]
name = "cezanne"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
colorgrad = "0.6.2"
cpal = "0.15.3"
hound = "3.5.1"
minifb = "0.27.0"
rodio = "0.18.1"
rustfft = "6.2.0"

[dev-dependencies]
criterion = "0.3"
rand = "0.8.5"

[[bench]]
name = "analizer"
harness = false

[[bench]]
name = "visualizer"
harness = false

[profile.release]
opt-level = 3     # Optimization level (0-3, with 3 being the highest)
codegen-units = 1 # Number of parallel codegen units
lto = true        # Enable Link-Time Optimization
